01_project/crs/06-httproute-combined-atlassian-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  name: combined-atlassian-route
  namespace: agentgateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: agentgateway-mcp-combined
      namespace: agentgateway-system
  rules:
    - backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: combined-atlassian-backend
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /mcp/atlassian
        - path:
            type: PathPrefix
            value: /.well-known/oauth-protected-resource/mcp/atlassian
        - path:
            type: PathPrefix
            value: /.well-known/oauth-authorization-server/mcp/atlassian
